<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/action_add"
        yourapp:showAsAction="ifRoom" />

    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/action_edit"
        yourapp:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_del"
        yourapp:showAsAction="ifRoom"/>

    <item android:id="@+id/action_reset"
        android:icon="@drawable/ic_autorenew_black_24dp"
        android:title="@string/action_reset"
        yourapp:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings"
        yourapp:showAsAction="always" />

</menu>